# ntu-dsai-t4-netflix-project

./: .env.example  .gitignore  NTU_DSAI_Module_2_T4_Netflix_Project_Implementation_Guide_v3_draft.docx  README.md  README_working_instructions.md  requirements.txt
dashboard/: app.py  environment.yml  setup_view.py
dashboard/.streamlit/: config.toml  secrets.toml
dbt_netflix/: .user.yml  dbt_project.yml  package-lock.yml  profiles.yml  yourownprofiles.txt
dbt_netflix/models/: fact_showlist.sql  schema.yml  sources.yml
dbt_netflix/models/marts/: dim_agerating.sql  dim_showcountry.sql  dim_showgenre.sql  dim_showtitle.sql  fact_showlist.sql
dbt_netflix/models/staging/: stg_netflix_titles.sql
dbt_netflix/models/star/: dim_agerating.sql  dim_showcast.sql  dim_showcountry.sql  dim_showgenre.sql  dim_showtitle.sql  schema.yml
docs/: decision_log.md
netflix_dagster/: README.md  pyproject.toml  run_netflix_dagster.sh  setup.cfg  setup.py
netflix_dagster/netflix_dagster/: assets.py  definitions.py  project.py
notebooks/: dashboard.ipynb
scripts/: 01_extract_and_upload_to_gcs.py  02_load_gcs_to_bigquery.py  03_clean_&_dbt.py  03_clean_bigquery_table.py  netflix_analytics_dashboard.py  netflix_analytics_dashboard_v1.py
